--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
             </div>
 
             <div class="btn-container">
-                <button type="submit" class="btn-valider"><a href="../Sushi form copy/pages/confirmation.html" style ="text-decoration: none; color: white;">
+                <button type="submit" class="btn-valider"><a href="pages/confirmation.html" style ="text-decoration: none; color: white;">
 
                  Commander</a></button>
             </div>
@@ -227,6 +227,7 @@
 </footer>
 
 </html>
+
 
 
 
