--- a/pages/mentions legales.html
+++ b/pages/mentions legales.html
@@ -9,7 +9,7 @@
     <p>
         <h1>Mentions Légales</h1>
 <h2>Le Sushi Chat</h2>
-Site internet : [www.lesushichat.com]
+Site internet : [https://nanako978.github.io/sushi-restaurant/index.html]
 
 <h2>Éditeur du site / Responsable de la publication :</h2>
 Nairi Nikoghosian <br>
@@ -29,3 +29,4 @@ Conformément à la loi « Informatique et Libertés », vous disposez d’un dr
   <a href="../index.html">Retour à la page d'accueil</a> <br>
 </body>
 </html>
+
