--- a/pages/mentions legales.html
+++ b/pages/mentions legales.html
@@ -17,7 +17,7 @@ Adresse : 9 Rue des Ecoles, 28500 Mézières en Drouais, France <br>
 Email : nnikoghosian@gmail.com <br>
 
 <h2>Hébergement :</h2>
-Dans le futur 
+Github
 
 <h2>Propriété intellectuelle :</h2>
 L’ensemble des contenus (textes, images, logo, etc.) présents sur ce site est la propriété exclusive de Le Sushi Chat. Toute reproduction, utilisation ou diffusion est strictement interdite sans autorisation préalable.
@@ -29,4 +29,5 @@ Conformément à la loi « Informatique et Libertés », vous disposez d’un dr
   <a href="../index.html">Retour à la page d'accueil</a> <br>
 </body>
 </html>
+
 
