--- a/pages/confirmation.html
+++ b/pages/confirmation.html
@@ -15,10 +15,11 @@
             <a href="../index.html">Retour à l'accueil</a>
         </div>
         <div class="image-content">
-            <img src="images/catfishing.gif" alt="Le Chat Pêche">
+            <img src="../images/catfishing.gif" alt="Le Chat Pêche">
         </div>
     </div>
 </body>
 
 </html>
+
 
